--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@
 #header {
 
     background-color: grey;
-    background-image: url('https://images.unsplash.com/photo-1503066211613-c17ebc9daef0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');
+    background-image: url('../image/harimau.jpg');
     padding-top:150px;
     padding-bottom: 150px;
     background-position: center;
@@ -56,7 +56,7 @@
 
 
 
- 
+
 }
 
 #header h1 {
